syntax = "proto3";

package workload.v1;

option go_package = "github.com/dkrizic/feature/service/service/workload/workloadv1;workloadv1";

// WorkloadType represents the type of Kubernetes workload
enum WorkloadType {
  WORKLOAD_TYPE_UNSPECIFIED = 0;
  WORKLOAD_TYPE_DEPLOYMENT = 1;
  WORKLOAD_TYPE_STATEFULSET = 2;
  WORKLOAD_TYPE_DAEMONSET = 3;
}

// RestartRequest contains the workload type and name to restart
message RestartRequest {
  WorkloadType type = 1;
  string name = 2;
  string namespace = 3;
}

// RestartResponse contains the result of the restart operation
message RestartResponse {
  bool success = 1;
  string message = 2;
}

// ServiceInfo contains information about the configured restart service
message ServiceInfo {
  bool enabled = 1;
  WorkloadType type = 2;
  string name = 3;
}

// InfoRequest is an empty request for getting service info
message InfoRequest {
}

// SimpleRestartRequest is an empty request that uses configured values
message SimpleRestartRequest {
}

service Workload {
  rpc RestartWorkload(RestartRequest) returns (RestartResponse);
  rpc Info(InfoRequest) returns (ServiceInfo);
  rpc Restart(SimpleRestartRequest) returns (RestartResponse);
}
